--- a/web-app/src/global.css
+++ b/web-app/src/global.css
@@ -1,5 +1,5 @@
 body, html, #root {
   height: 100%;
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Inria Sans', sans-serif;
 }
